second attempt at fixing vertical alignment

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -303,9 +303,9 @@ h6 {
 .grid-page > .menu > .menu-contents > .strapline > p.strapline-extra {
   display: flex;
   flex-direction: row;
-  align-self: center;
+  align-items: center;
   justify-content: center;
-  padding-top: 0.5em;
+  margin-top: 0em;
   padding-bottom: 0em;
   margin-top: 0em; }
 
